# 11

./: .gitignore  CMakeLists.txt  FaceRecognitionLogin.pro  README.md  appcontroller.cpp  appcontroller.h  databasemanager.cpp  databasemanager.h  facedetector.cpp  facedetector.h  facerecognizer.cpp  facerecognizer.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  registerdialog.cpp  registerdialog.h
